docker: add installation to build tests
Basic test that "make install" works; this requires msgfmt so add
gettext to the packages.

Drop ccache on Fedora, because it fails on RHEL 7.4, it is not used
by any other distro and it is not particularly useful on throwaway
containers.

Signed-off-by: Paolo Bonzini <pbonzini@redhat.com>
Message-Id: <1506080563-41084-1-git-send-email-pbonzini@redhat.com>

--- a/tests/docker/common.rc
+++ b/tests/docker/common.rc
@@ -36,3 +36,11 @@ build_qemu()
     $QEMU_SRC/configure $config_opts
     make $MAKEFLAGS
 }
+
+install_qemu()
+{
+    make install $MAKEFLAGS DESTDIR=$PWD/=destdir
+    ret=$?
+    rm -rf $PWD/=destdir
+    return $ret
+}
