disas: Add capstone as submodule
Do not require the submodule, but use it if present (in preference
even to a system copy).  This will allow us to easily use capstone
in older systems for which a package is not available, and also
easily track bug fixes from upstream.

Signed-off-by: Richard Henderson <richard.henderson@linaro.org>
Message-Id: <20170926201427.2833-10-richard.henderson@linaro.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "roms/QemuMacDrivers"]
 	path = roms/QemuMacDrivers
 	url = git://git.qemu.org/QemuMacDrivers.git
+[submodule "capstone"]
+	path = capstone
+	url = https://github.com/aquynh/capstone.git
