tests/tcg: add write tests for nbyte = 0
rename linux-test so we can get both (32 and 64 bit) versions in a multilib
x86 host.

published as an RFC since the include options that were needed to fix the
build will most likely conflict with scripts/clean-includes

`make check` is unaffected by this new test (which fails in x86_64) and the
rule to automatically run it against qemu-user and diff has been left out
in purpose, not to affect any user of the remaining surrounding tests, but
discussion on how to get tests/tcg back in shape, or if linux-user should
be tested somewhere else is also encouraged

Signed-off-by: Carlo Marcelo Arenas Belón <carenas@gmail.com>
Message-Id: <20170930090240.23729-1-carenas@gmail.com>

--- a/tests/tcg/Makefile
+++ b/tests/tcg/Makefile
@@ -18,7 +18,7 @@ LDFLAGS=
 # also, pi_10.com runs indefinitely
 
 I386_TESTS=hello-i386 \
-	   linux-test \
+	   linux-test-i386 \
 	   testthread \
 	   sha1-i386 \
 	   test-i386 \
@@ -47,7 +47,7 @@ run-%: %
 	-$(QEMU) ./$*
 
 run-hello-i386: hello-i386
-run-linux-test: linux-test
+run-linux-test-i386: linux-test-i386
 run-testthread: testthread
 run-sha1-i386: sha1-i386
 
@@ -105,8 +105,11 @@ test-x86_64: test-i386.c \
 	$(CC_X86_64) $(QEMU_INCLUDES) $(CFLAGS) $(LDFLAGS) -o $@ $(<D)/test-i386.c -lm
 
 # generic Linux and CPU test
-linux-test: linux-test.c
-	$(CC_I386) $(CFLAGS) $(LDFLAGS) -o $@ $< -lm
+linux-test-i386: linux-test.c
+	$(CC_I386) $(QEMU_INCLUDES) $(CFLAGS) $(LDFLAGS) -o $@ $< -lm
+
+linux-test-x86_64: linux-test.c
+	$(CC_X86_64) $(QEMU_INCLUDES) $(CFLAGS) $(LDFLAGS) -o $@ $< -lm
 
 # vm86 test
 runcom: runcom.c
