i386/pc: move pvpanic.c from hw/misc/ to hw/i386/
Signed-off-by: Philippe Mathieu-Daudé <f4bug@amsat.org>
Message-Id: <20171017001209.32276-37-f4bug@amsat.org>
Reviewed-by: Thomas Huth <thuth@redhat.com>

--- a/hw/i386/Makefile.objs
+++ b/hw/i386/Makefile.objs
@@ -7,6 +7,6 @@ obj-y += amd_iommu.o
 obj-$(CONFIG_XEN) += ../xenpv/ xen/
 
 obj-y += kvmvapic.o
-obj-y += acpi-build.o
+obj-y += acpi-build.o pvpanic.o
 obj-y += pci-assign-load-rom.o
 obj-y += vmport.o
