--- a/hw/i386/Makefile.objs
+++ b/hw/i386/Makefile.objs
@@ -9,4 +9,4 @@ obj-$(CONFIG_XEN) += ../xenpv/ xen/
 obj-y += kvmvapic.o
 obj-y += acpi-build.o pvpanic.o
 obj-y += pci-assign-load-rom.o
-obj-y += vmport.o
+obj-y += vmport.o port92.o
