arm: Adding makefile for Kinetis K64 MK64FN1M0
I add a new arm machine with some peripherals. The machine is mk64fn1m0, a
cortex-m4 microcontroller from NXP Kinetis family. The machine can run a
simple arm binary file using UART0 in polling mode.
I prepared two patchs to include this machine:
PATCH v1: Include the machine and peripherals devices;
PATCH v2: Change the make file to compile this machine.
Also, I made a folder tree to accomodate this machine more or less like u-boot.
In my opinion put all files in the same folder "/hw/arm" is not a good idea,
or put all code in an unique file, because machines from the same family
sharing the same peripherals.
The folder tree struct is machine/family/peripheral, as an example:
kinetis/k64/peripheral.
So, in this way the code will be more maintainable.

Signed-off-by: Gabriel Augusto Costa <gabriel291075@gmail.com>
Message-Id: <1508417485-31911-1-git-send-email-gabriel291075@gmail.com>

--- a/hw/arm/Makefile.objs
+++ b/hw/arm/Makefile.objs
@@ -20,3 +20,7 @@ obj-$(CONFIG_FSL_IMX6) += fsl-imx6.o sabrelite.o
 obj-$(CONFIG_ASPEED_SOC) += aspeed_soc.o aspeed.o
 obj-$(CONFIG_MPS2) += mps2.o
 obj-$(CONFIG_MSF2) += msf2-soc.o msf2-som.o
+obj-y += kinetis/k64/mk64fn1m0.o kinetis/k64/peripheral/mcg.o \
+	kinetis/k64/peripheral/sim.o kinetis/k64/peripheral/pmux.o \
+	kinetis/k64/peripheral/uart.o kinetis/k64/peripheral/flextimer.o
+	
