CAN bus SJA1000 chip register level emulation for QEMU
The core SJA1000 support is independent of following
patches which map SJA1000 chip to PCI boards.

The work is based on Jin Yang GSoC 2013 work funded
by Google and mentored in frame of RTEMS project GSoC
slot donated to QEMU.

Rewritten for QEMU-2.0+ versions and architecture cleanup
by Pavel Pisa (Czech Technical University in Prague).

Signed-off-by: Pavel Pisa <pisa@cmp.felk.cvut.cz>
Message-Id: <4ff737331a3a05ee0fc82ef0371ae6c3b9311921.1509583771.git.pisa@cmp.felk.cvut.cz>

--- a/hw/can/Makefile.objs
+++ b/hw/can/Makefile.objs
@@ -1,3 +1,4 @@
 # CAN bus interfaces emulation and infrastructure
 
 common-obj-$(CONFIG_CAN_CORE) += can_core.o
+common-obj-$(CONFIG_CAN_SJA1000) += can_sja1000.o
