--- a/hw/can/Makefile.objs
+++ b/hw/can/Makefile.objs
@@ -2,3 +2,4 @@
 
 common-obj-$(CONFIG_CAN_CORE) += can_core.o
 common-obj-$(CONFIG_CAN_SJA1000) += can_sja1000.o
+common-obj-$(CONFIG_CAN_PCI) += can_kvaser_pci.o
